# VED

./: .gitignore  UPGRADE.md  launch_ved.bat  note.txt  readme.md  requirements.txt  ved_requirements.txt  ved_start.py
ai/: hybrid_llm.py
brain/: __init__.py  intent_engine.py  permissions.py  router.py
config/: config.py
doctor/: __init__.py  ved_doctor.py
gui/electron/: README.md
gui/react/: README.md
kernel/: main.py  router.py  safety.py  ved.py
memory/: memory.py
models/: model_manager.py
models/offline/: qwen_local.py
models/online/: gemini_llm.py  openai_llm.py
os_control/: CMakeLists.txt  README.md
os_control/api/: ved_os_api.hpp
os_control/bindings/: ved_os_bindings.cpp
os_control/core/: ved_os_win.cpp
planner/: planner.py
tools/: __init__.py  file_tool.py  math_tool.py  memory_tool.py  system_help.py  system_tool.py  time_tool.py
ui/: jarvis_ui.py
utils/: net_check.py
voice/: stt.py  tts.py  voice_loop.py
